--- a/public/stylesheets/sass/comments/form.sass
+++ b/public/stylesheets/sass/comments/form.sass
@@ -15,6 +15,17 @@ form#new_comment
     :color rgb(0,0,0)
   a#comment_upload_link
     :float left
+  a#comment_hours_link
+    :float left
+  .hours
+    :padding-left 1px
+    :padding-right 10px
+    :clear both
+    :font-size 11px
+    img
+      :vertical-align middle
+    span
+      :vertical-align middle
   .statuses
     :position relative  
     label
@@ -69,7 +80,7 @@ form#new_comment
       :top 3px
     :text-align right
     :float right
-    :width 200px
+    :width 150px
   .loading
     :float right
   p.error
