Load any new comments when posting a comment

--- a/app/views/comments/_new.haml
+++ b/app/views/comments/_new.haml
@@ -10,6 +10,7 @@
       = the_comment_upload_link(comment)
       = upload_area(comment)
     - if target
+      = last_comment_input
       - if target.is_a?(Task)
         .statuses
           = f.label :status
