--- a/app/views/comments/_edit.haml
+++ b/app/views/comments/_edit.haml
@@ -1,7 +1,8 @@
-- remote_form_for comment do |f|
+- remote_form_for [comment.project, comment], :loading => show_loading_comment_form(comment.id) do |f|
   = comment_fields(f,comment,true)
-  .submit
+  .submit{:id => "comment_submit_#{comment.id}"}
     = f.submit t('.submit')
     = t 'common.or'
     = cancel_edit_comment_link(comment)
-  .clear
+  .clear	
+  = loading('comment_form', comment.id)
