--- a/public/stylesheets/sass/comments/form.sass
+++ b/public/stylesheets/sass/comments/form.sass
@@ -76,6 +76,33 @@ form#new_comment
     :color red
     :font-weight bold
 
+form.edit_comment
+  :padding-bottom 3px
+  .body
+    :margin-bottom 5px
+    textarea
+      :width 626px
+      :margin-bottom 0px
+    .previewBox
+      :margin 4px
+      :padding 4px
+      :border solid 2px rgb(235,235,235)
+  .comment_body
+    :height 4em
+    :color rgb(0,0,0)
+  .submit
+    :padding
+      :top 3px
+    :text-align right
+    :float right
+    :width 200px
+  .loading
+    :float right
+  p.error
+    :color red
+    :font-weight bold
+
+
 form.reopen
   :background rgb(255,255,200)
   :border 1px rgb(220,220,150) solid
