--- a/public/stylesheets/sass/comments/show.sass
+++ b/public/stylesheets/sass/comments/show.sass
@@ -17,12 +17,14 @@
     :visibility hidden
     :position relative
     :margin 0px
+    :float right
     span
+      :margin-left -44px
       :overflow auto
       :position absolute
-      :display block
-      :width 16px
+      :width 38px
       :height 40px
+      :text-align right
   .info
     :width 70px
     :padding-right 10px
