Add 15 minutes restriction on editing and deleting comments

--- a/app/views/comments/_actions.haml
+++ b/app/views/comments/_actions.haml
@@ -1,4 +1,6 @@
 %p.actions
   %span
-    = edit_comment_link(comment)
-    = delete_comment_link(comment)
+    - if true#comment.can_edit?(current_user)
+      = edit_comment_link(comment)
+    - if comment.can_destroy?(current_user)
+      = delete_comment_link(comment)
