Hour reports now actually work

--- a/app/views/hours/index.haml
+++ b/app/views/hours/index.haml
@@ -1,13 +1,16 @@
 -content_for :banner do
   =calendar_nav(@current_project,@year,@month)
   .calendar#calendar
-    = build_calendar(@comments,@year,@month)
-  = hours_js(@comments)
+    = build_calendar(@year,@month)
+  = hours_js(@year,@month,@comments)
 
 -content_for :column do
-  %select#user_filter
-    =list_hour_users(@users_displayed)
-  =observe_user_filter
+  %select#report_list
+    =list_hour_reports
+  =observe_hour_reports
+  #user_filter
+    =list_hour_filters(@current_project)
+  =observe_hour_filter
  
 = new_hour_comment_form(@current_project, Comment.new)
 = list_comments(@comments,@current_project)
