--- a/app/views/hours/index.haml
+++ b/app/views/hours/index.haml
@@ -1,13 +1,17 @@
--content_for :banner do
+%div
   =calendar_nav(@current_project,@year,@month)
   .calendar#calendar
     = build_calendar(@year,@month)
+  .calendar.weektable
+    = build_weektable(@year, @month)
   = hours_js(@year,@month,@comments)
 
 -content_for :column do
+  %h2= "Report"
   %select#report_list
     =list_hour_reports
   =observe_hour_reports
+  %h2= "Filter By"
   #user_filter
     =list_hour_filters(@current_project)
   =observe_hour_filter
