--- a/app/views/hours/_report_list.haml
+++ b/app/views/hours/_report_list.haml
@@ -1,3 +1,3 @@
 - for report in ['user', 'task', 'project']
   %option{:value => report}
-    = "#{report}"
+    = "#{t('hours.reports.' + report)}"
