--- a/public/stylesheets/sass/calendars.sass
+++ b/public/stylesheets/sass/calendars.sass
@@ -95,3 +95,7 @@ div.weektable
     :text-align center
     :-moz-border-radius 3px
     :-webkit-border-radius 3px
+
+#filter_list
+  .filter
+    :margin-left 16px
