UI improvements to time tracking

--- a/app/views/hours/index.haml
+++ b/app/views/hours/index.haml
@@ -16,5 +16,5 @@
     =list_hour_filters(@current_project)
   =observe_hour_filter
 
-%h2= "Comments"
+%h2= t('hours.comments')
 = list_comments(@comments,@current_project)
