--- a/public/stylesheets/sass/comments/form.sass
+++ b/public/stylesheets/sass/comments/form.sass
@@ -17,6 +17,7 @@ form#new_comment
     :float left
   a#comment_hours_link
     :float left
+    :margin-left 3px
   .hours
     :padding-left 1px
     :padding-right 10px
