--- a/app/views/hours/_filter.haml
+++ b/app/views/hours/_filter.haml
@@ -1,15 +1,15 @@
 #filter_list
   #user_filters
     = check_box_tag "filter_allusers", 0, true
-    = label "filter_allusers", t('hours.all_users')
+    = label_tag "filter_allusers", t('hours.all_users')
     - @current_project.users.each do |user|
       .filter
         = check_box_tag "ufilter_#{user.id}", user.id, false
-        = label "ufilter_#{user.id}", "#{h(user.name)} (#{user.login})"
+        = label_tag "ufilter_#{user.id}", "#{h(user.name)} (#{user.login})"
   #task_filters
     = check_box_tag "filter_alltasks", 0, true
-    = label "filter_alltasks", t('hours.all_tasks')
+    = label_tag "filter_alltasks", t('hours.all_tasks')
     - @current_project.tasks.each do |task|
       .filter
         = check_box_tag "tfilter_#{task.id}", task.id, false
-        = label "tfilter_#{task.id}", "#{h(task.name)}"
+        = label_tag "tfilter_#{task.id}", "#{h(task.name)}"
