--- a/public/stylesheets/sass/calendars.sass
+++ b/public/stylesheets/sass/calendars.sass
@@ -12,6 +12,7 @@ div.calendar
     :padding 0px
     :border solid 1px rgb(220,220,220)
     :width 90px
+    :text-align right
     .cd
       :background-color rgb(250,250,250)
     p
@@ -20,7 +21,6 @@ div.calendar
       :padding 4px 2px 4px 2px
       :margin-top 4px
       :font-size 11px
-      :font-weight bold
       :text-align center
       :-moz-border-radius 3px
       :-webkit-border-radius 3px
@@ -48,6 +48,7 @@ div.calendar
     :border solid 1px rgb(250,250,250)
 div.calendar_navigation
   :font-size 12px
+  :text-align center
   p.month_value
     :padding-top 3px
     :margin 10px 10px
@@ -55,9 +56,8 @@ div.calendar_navigation
       :padding 0px 5px
       :font-size 18px
     a
-      :font-size 14px
-      :color rgb(255,255,255)
-      :background rgb(200,200,200)
+      :font-size 12px
+      :color rgb(150,150,150)
       :text-decoration none
       :padding 1px 5px
         :bottom 3px
@@ -85,13 +85,12 @@ div.weektable
     :width 90px
   td
     :border solid 1px rgb(220,220,220)
-  p	
+  p
     :background rgb(102, 140, 217)
     :color rgb(255,255,255)
     :padding 4px 2px 4px 2px
     :margin-top 4px
     :font-size 11px
-    :font-weight bold
     :text-align center
     :-moz-border-radius 3px
     :-webkit-border-radius 3px
