--- a/app/views/comments/_actions.haml
+++ b/app/views/comments/_actions.haml
@@ -1,4 +1,4 @@
-%p.actions
+%p.actions{:id => "comment_#{comment.id}_actions", :style => 'display:none'}
   %span
     - if comment.can_edit?(current_user)
       = edit_comment_link(comment)
