--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,5 +1,5 @@
 - cache "#{@current_user.language}_#{@current_user.time_zone.gsub(/\W/,'')}_comment_#{comment.id}" do
-  .comment{:id => "comment_#{comment.id}" }
+  .comment{:id => "comment_#{comment.id}", :immutable_at => datetime_ms(comment.created_at + 15.minutes) }
     .info
       = thumb_avatar(comment.user)
     .block
