--- a/app/views/shared/_javascripts.erb
+++ b/app/views/shared/_javascripts.erb
@@ -1,1 +1,1 @@
-<%= javascript_tag("new PeriodicalExecuter(format_posted_date_#{I18n.locale}, 30);") %>
+<%= javascript_tag("new PeriodicalExecuter(format_posted_date_#{I18n.locale}, 30); Comment.watch_edit(); "); %>
