New project view for mobile version

--- a/app/views/projects/index.m.haml
+++ b/app/views/projects/index.m.haml
@@ -9,3 +9,5 @@
     - elsif @archived_projects.any?
       .project
         = link_to "Show #{@archived_projects.size} Archived Projects", project_archived_path, :style => 'color: #999'
+    .project
+      = link_to "New Project", new_project_path, :class => 'new'
