--- a/public/stylesheets/sass/projects/edit.sass
+++ b/public/stylesheets/sass/projects/edit.sass
@@ -11,3 +11,8 @@
     :-moz-border-radius
       :topleft 5px
     :-webkit-border-top-left-radius 5px
+  .owner
+    :margin-bottom 20px
+    .description
+      :margin 20px 0
+      
