--- a/public/stylesheets/sass/calendars.sass
+++ b/public/stylesheets/sass/calendars.sass
@@ -13,8 +13,6 @@ div.calendar
     :border solid 1px rgb(220,220,220)
     :width 90px
     :text-align right
-    .cd
-      :background-color rgb(250,250,250)
     p
       :background rgb(102, 140, 217)
       :color rgb(255,255,255)
@@ -24,6 +22,11 @@ div.calendar
       :text-align center
       :-moz-border-radius 3px
       :-webkit-border-radius 3px
+    .cd
+      :background-color rgb(250,250,250)
+  td.today
+    .cd
+      :background-color #ff9
   td.this_month
     :border solid 1px rgb(220,220,220)
   td.previous_month
@@ -82,8 +85,6 @@ div.weektable
     :background-color #dedede
     :font-size 11px
     :width 90px
-  td
-    :border solid 1px rgb(220,220,220)
   p
     :background rgb(102, 140, 217)
     :color rgb(255,255,255)
