Explaining how invites work to non-admin users

--- a/public/stylesheets/sass/column.sass
+++ b/public/stylesheets/sass/column.sass
@@ -6,6 +6,8 @@ div.column_wrap
     :text-transform uppercase
     :margin-bottom 5px  
     :margin-left 0
+  p
+    :margin-bottom 5px
   :font-size 12px
   div.column  
     h2
