--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -103,6 +103,12 @@
           a
             :color rgb(120,0,0)
 
+.column
+  h2
+    :margin-top 20px
+  p
+    :margin 10px 0
+
 .watching
   :background rgb(250,250,250)
   :border solid 1px rgb(230,230,230)
