--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -33,33 +33,19 @@
       :clear both
       :display block
       :font-size 12px
-      :border-bottom 1px solid rgb(240,240,240)
       :padding 5px
       :margin-bottom 5px
       :color rgb(80,80,80)
       form.person_form
         :padding 10px
-        :background rgb(200,200,200)
-        :-moz-border-radius 5px
-        :-webkit-border-radius 5px
-        :width 588px
+        :background #ff9
+        :width 530px
         :float left
         h2
           :color rgb(80,80,80)
           :margin 0px
+            :bottom 10px
           :padding-left 5px
-        .role
-          :-moz-border-radius 5px
-          :-webkit-border-radius 5px
-          :margin 5px
-            :bottom 0px
-          :padding 5px
-          :background rgb(220,220,220)
-          :float left
-          :width 127px
-          :height 100px
-        .active
-          :background rgb(255,255,255)
         .submit
           :width 100%
           :clear both
@@ -68,7 +54,7 @@
           :text-align right
       .name
         :float left
-        :width 500px
+        :width 350px
         h2
           :margin 0px
           :font-size 14px
