--- a/app/views/pages/_column.haml
+++ b/app/views/pages/_column.haml
@@ -1,5 +1,8 @@
 - content_for :column do
   - if project
-    = new_page_link(project)
+    - if project.editable?(current_user)
+      = new_page_link(project)
+    - else
+      %p= t('.cant_create')
   .pages
     = list_pages(pages,current_target)
