--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -1,5 +1,8 @@
-= task_list_link(project)
-= task_list_form(project,TaskList.new)
+- if project.editable?(current_user)
+  = task_list_link(project)
+  = task_list_form(project,TaskList.new)
+- else
+  %p= t('.cant_create')
 
 = task_navigation(project)
 
