--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -1,7 +1,9 @@
 - content_for :column do
-  = add_upload_link(@current_project) if @upload.errors.empty?
-  = upload_form(@current_project,@upload)
-  
-  %p= t('.max_upload_size', :mb => APP_CONFIG['asset_max_file_size'])
-  
+  - if @current_project.editable?(current_user)
+    = add_upload_link(@current_project) if @upload.errors.empty?
+    = upload_form(@current_project,@upload)
+    %p= t('.max_upload_size', :mb => APP_CONFIG['asset_max_file_size'])
+  - else
+    %p= t('.cant_create')
+
 = list_uploads(@current_project,@uploads)
