--- a/public/stylesheets/sass/comments/show.sass
+++ b/public/stylesheets/sass/comments/show.sass
@@ -42,15 +42,16 @@
       :position relative
       :margin-top 20px
       :width 16px
-    .hours
-      :padding-left 1px
-      :padding-right 10px
-      :clear both
-      :font-size 11px
-      img
-        :vertical-align middle
-      span
-        :vertical-align middle
+  span.hours
+    :font-size 11px
+    :font-weight bold
+    :color #ffffff
+    :text-align center
+    :background-color #668CD9
+    :-webkit-border-radius 3px
+    :-moz-border-radius 3px
+    img
+      :margin-top 6px
   span.author, span.project
     :color rgb(120,120,120)
     a
