Local copy of print icon

--- a/public/stylesheets/sass/projects/default.sass
+++ b/public/stylesheets/sass/projects/default.sass
@@ -57,7 +57,7 @@
     a
       :font-size 12px
       :padding-left 25px
-      :background url(http://www.bcn.cl/img_iconos/print_icon.gif) no-repeat left
+      :background url(/images/print.gif) no-repeat left
       
 @media print
   .index_projects
