--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -20,6 +20,7 @@ if logged_in?
       t.named "#{t('.all_projects')} #{image_tag('triangle.png', :class => 'triangle')}"
       t.links_to projects_path
       t.highlights_on :controller => :projects, :action => :index
+      t.highlights_on :controller => :task_lists, :action => :index, :project_id => nil
       t.tab_index = 101
     end
 
