New footer, darker project navigation bar

--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -91,7 +91,7 @@
       a  
         :float left
         :display block
-        :color #49759d
+        :color #263b4c
         :text-decoration none
         :padding 4px 10px 6px 8px
         :margin-bottom 0px
