--- a/public/stylesheets/sass/footer.sass
+++ b/public/stylesheets/sass/footer.sass
@@ -3,13 +3,16 @@ div.footer
   :padding
     :top 5px
     :bottom 30px
-  :color rgb(140,140,140)
-  :font-size 12px
+  :color #8c8c8c
+  :font-size 10px
+  :margin-top 20px
+  :text-transform uppercase
+  :border-top 1px solid #EEEEEE
   p
     :margin 0px
   a
     :color rgb(140,140,140)
-    :font-size 12px
+    :font-size 10px
     :padding-left 20px
   img
     :vertical-align bottom
