@all, used for mentioning all users in a project, is highlighted

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -1,7 +1,7 @@
 @import default.sass
 @import header.sass
 @import navigation.sass
-@import wrapper.sass 
+@import wrapper.sass
 @import column.sass
 @import footer.sass
 @import forms.sass
@@ -69,3 +69,5 @@
 
 @import shared/avatars.sass
 @import shared/profile_completeness.sass
+
+@import mentions.sass
