--- a/app/styles/_facebox.sass
+++ b/app/styles/_facebox.sass
@@ -1,129 +1,65 @@
 #facebox
-  position: absolute
+  position: fixed
   top: 0
   left: 0
-  margin: -20px 0 0 -20px
   z-index: 100
-  text-align: left
-  padding: 18px
-  min-width: 40px
-  min-height: 40px
-  .n
-    background: url(/images/facebox/fancy_shadow_n.png)
-  .s
-    background: url(/images/facebox/fancy_shadow_s.png)
-  .w
-    background: url(/images/facebox/fancy_shadow_w.png)
-  .e
-    background: url(/images/facebox/fancy_shadow_e.png)
-  .nw
-    background: url(/images/facebox/fancy_shadow_nw.png)
-  .ne
-    background: url(/images/facebox/fancy_shadow_ne.png)
-  .sw
-    background: url(/images/facebox/fancy_shadow_sw.png)
-  .se
-    background: url(/images/facebox/fancy_shadow_se.png)
-  a
-    padding: 0
-  a.next
-    background: url(/images/facebox/fancy_right.png)
-  a.prev
-    background: url(/images/facebox/fancy_left.png)
-  .close
-    background: url(/images/facebox/fancy_closebox.png)
-  .loading
-    background: url(/images/facebox/loading.gif)
-  .w, .e, .nw, .ne, .sw, .se
-    min-height: 18px
-    min-width: 13px
-  .n, .s
-    background-repeat: repeat-x
-    height: 18px
-  .w, .e
-    background-repeat: repeat-y
-  .nw, .ne, .sw, .se, a.next, a.prev, .closek, .loading
-    background-repeat: no-repeat
-  a.next
-    background-position: 9999px 50%
-    display: block
-    position: absolute
-    cursor: pointer
-  a.prev
-    background-position: -9999px 50%
-    display: block
-    position: absolute
-    cursor: pointer
-  a.prev:hover
-    background-position: 0 50%
-  a.next:hover
-    background-position: 100% 50%
-  .close
-    position: absolute
-    top: 5px
-    right: 0
-    display: block
-    width: 30px
-    height: 30px
-  .navigation
-    .counter
-      background: black
-      color: white
-      text-align: center
-      position: absolute
-      bottom: -33px
-      left: -10px
-      padding: 2px 0
-      font-size: 11px
-  .loading
-    margin: 0 auto
-    width: 22px
-    height: 22px
-    text-align: center
-  .popup
-    position: relative
-  table
-    border-collapse: collapse
-  td
-    border-bottom: 0
-    padding: 0
-  .body
-    padding: 10px
-    background: white
-    width: auto
-    overflow: hidden
-  .image
-    text-align: center
-    line-height: 0
-  img
-    border: 0
-    margin: 0
-  .footer
-    position: absolute
-    top: 28px
-    left: 23px
-    padding: 0
-    margin: 0
-    width: 90%
-    cursor: pointer
-    img
-      vertical-align: middle
-  .tl, .tr, .bl, .br
-    height: 10px
-    width: 10px
-    overflow: hidden
-    padding: 0
-
-#facebox_overlay
-  position: fixed
-  top: 0px
-  left: 0px
-  height: 100%
   width: 100%
-
-.facebox_hide
-  z-index: -100
-
-.facebox_overlayBG
-  background-color: black
-  z-index: 99
+  height: 100%
+  text-align: left
+  .facebox-wrapper
+    background: gray
+    background: rgba(black, .47)
+    +rounded(7px)
+    padding: 10px
+    width: 445px
+    margin: 100px auto 0
+    .facebox-container
+      background: white
+      width: auto
+      margin: 0
+      padding: 0
+      +box-shadow(rgba(black, .6) 0 0 6px)
+    .facebox-extra
+      padding: 8px 65px 8px 10px
+      min-height: 20px
+      border-top: 1px solid #ddd
+      position: relative
+      .description
+        font-size: 12px
+        color: #444
+      .close
+        position: absolute
+        top: 8px
+        right: 10px
+        font:
+          size: 10px
+          weight: bold
+        text-transform: uppercase
+        text-shadow: white 1px 1px 1px
+        padding: 3px 6px
+        border: 1px solid silver
+        +rounded(4px)
+        background: #eee
+        +gradient-bottom(silver)
+        &:link, &:hover, &:active, &:visited
+          color: #444
+          text-decoration: none
+    &.html
+      .facebox-container
+        +rounded(2px)
+      .facebox-content
+        width: auto
+        max-height: 350px
+        overflow: auto
+        padding: 10px
+        margin: 0
+    &.image
+      width: auto
+      img
+        display: block
+    &.loading
+      color: #555
+      .facebox-content
+        padding: 10px
+      .facebox-extra
+        display: none
