--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -49,6 +49,9 @@ form
       float: left
       padding-right: 10px
 
+  .date_fields
+    margin-bottom: 10px
+
   .submit
     width: 590px
     font-size: 12px
@@ -72,4 +75,14 @@ form
       border: 1px red solid
 
   .form_error
-    background: rgb(255, 200, 200)
+    border: 1px red solid	
+    background: rgb(255,200,200)
+
+  .text_actions	
+    text-decoration: underline
+
+form.app_form
+  :background rgb(255,255,220)
+  :border 1px solid rgb(200,200,120)
+  :padding 20px
+  :margin-bottom 15px
