--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -1,68 +1,62 @@
-#task_lists
-  clear: both
+div.column
+  span.overdue
+    color: red
 
-div.task_list_wrap_reorder
-  margin-top: 0px
+  span.task_status
+    :margin
+      right: 5px
+      bottom: 3px
+    padding: 2px 5px
+    font-size: 10px
+    float: none
 
-div#sortable_task_lists
-  margin: 10px 0px
+.filter_box
+  select
+    max-width: 280px
+  p
+    color: #666
 
-=task_panel_link
-  display: block
-  background: rgb(240, 240, 240)
-  font-size: 12px
-  color: rgb(120, 120, 120)
-  padding: 4px
-    top: 0px
-
-a.new_task_link
-  +task_panel_link
-  border: solid 1px rgb(210, 210, 210)
-    top: none
-  -moz-border-radius:
-    bottomleft: 5px
-    bottomright: 5px
-  -webkit-border-bottom-left-radius: 5px
-  -webkit-border-bottom-right-radius: 5px
-
-a.show_archived_tasks_link
-  +task_panel_link
-
-span.task_status, span.current_task_status
-  padding: 0 3px
-  text-transform: uppercase
-  font-size: 11px
-  -moz-border-radius: 4px
-  -webkit-border-radius: 4px
-  display: inline-block
-
-.task_status_new
-  background: #9da3a7
-  color: white
-
-.task_status_open
-  background: #ffc947
-  color: #333333
-
-.task_status_hold
-  background: #be3cff
-  color: white
-
-.task_status_resolved
-  background: #afd142
-  color: white
-
-.task_status_rejected
-  background: #e97063
-  color: white
-
-.tasks
-  .archived_task
-    color: rgb(120, 120, 120)
+.task_form, .task_list_form
+  margin-bottom: 10px
+  label
+    font-weight: bold
+    i
+      font-weight: normal
+      color: rgb(100,100,100)
+  p
+    color: rgb(100,100,100)
+    &.optional
+      margin-top: 20px
+      padding-top: 15px
+      border-top: 1px dashed rgb(200,200,200)
+  .text_field
+    padding-right: 10px
+    input
+      width: 100%
+      :border
+        top: solid 1px rgb(90,90,90)
+        left: solid 1px rgb(150,150,150)
+        bottom: solid 1px rgb(150,150,150)
+        right: solid 1px rgb(90,90,90)
+  .select
+    label
+      padding-top: 3px
+    input
+      padding: 0px
+      margin: 0px
+  .pick_date
+    width: 250px
+    display: inline-block
+  .submit
+    display: block
+    width: 100%
+    text-align: right
+    input
+      float: none
 
 .archive
-  background: rgb(255, 255, 200)
-  border: 1px rgb(220, 220, 150) solid
+  background: rgb(255,255,200)
+  border: 1px rgb(220,220,150) solid
   -moz-border-radius: 5px
   -webkit-border-radius: 5px
   padding: 20px
@@ -72,286 +66,219 @@ span.task_status, span.current_task_status
     font-size: 13px
     margin-bottom: 10px
 
-.task_form, .task_list_form
-  margin-bottom: 10px
-  .text_field
-    padding-right: 10px
-    input
-      width: 100%
-      border:
-        top: solid 1px rgb(90, 90, 90)
-        left: solid 1px rgb(150, 150, 150)
-        bottom: solid 1px rgb(150, 150, 150)
-        right: solid 1px rgb(90, 90, 90)
-  .select
-    label
-      padding-top: 3px
-    input
-      padding: 0px
-      margin: 0px
-  .submit
-    width: 100%
-    text-align: right
-    input
-      float: none
-
-.task_header, .task_list_header
+.task_header
   display: block
   padding: 5px 0px
   font-size: 12px
   h2
     border: none
-    span.task_status
-      padding: 2px 5px
-      font-size: 12px
-      float: none
     margin: 0px
       bottom: 3px
-
-.task_header
-  span.due_on
-    display: block
-    color: rgb(160, 160, 160)
-    margin-right: 10px
-  span.overdue
-    color: rgb(200, 0, 0)
-    font-weight: bold
-  span.assignment
-    color: rgb(160, 160, 160)
-    a
-      color: rgb(160, 160, 160)
-      text-decoration: underline
-    a:hover
-      color: rgb(0, 0, 200)
   .text_actions
     float: right
     font-size: 12px
-    color: rgb(200, 200, 200)
-    a
-      text-decoration: underline
+    color: rgb(200,200,200)
   .watching
     font-size: 12px
     margin-left: 20px
-    color: rgb(180, 180, 180)
+    color: rgb(180,180,180)
 
-.index_task_lists
-  table.task_list td.status
-    padding-left: 20px
+.task_list_container
+  margin: 10px 0 20px
 
-table.task_list
-  width: 100%
-  margin-bottom: 20px
+.new_task
+  font-size: 11px
+  :padding
+    top: 10px
+    left: 50px
+  a
+    color: rgb(100,100,100)
+    text-decoration: underline
+
+.task_list_container.reordering
   th
-    font-size: 14px
-    border-bottom: solid 1px rgb(200, 200, 200)
-    padding-bottom: 5px
-  td
-    padding: 4px 5px
-    span.task_status
-      font-size: 11px
-  td.status
-    text-align: right
-    width: 30px
-    padding-top: 6px
-    span
-      display: block
-      width: 23px
-      padding: 0
-      text-align: center
-  .comments_count
-    float: right
-    padding: 0
-      top: 4px
-    text-transform: none
-    font-size: 11px
-    -moz-border-radius: 0
-    -webkit-border-radius: 0px
-    color: rgb(150, 150, 150)
-    background: rgb(255, 255, 255)
     border: none
-  thead
-    tr
+    font-size: 16px
+    padding-bottom: 5px
+  img.drag
+    display: inline-block
+    margin-right: 20px
+  div.tasks, .new_task
+    display: none
+
+.task_list, .task_list_closed
+  width: 100%
+  a
+    color: rgb(50,50,50)
+  img.drag
+    display: none
+  .head
+    font-size: 14px
+    border-bottom: solid 1px rgb(240,240,240)
+    padding-bottom: 5px
+    color: rgb(100,100,100)
+    .dates
+      float: right
+      padding: 0
+        top: 6px
+        right: 20px
+      font-size: 10px
+      color: rgb(150,150,150)
+    a
+      font-weight: bold
+  .archive
+    display: none
+  .task
+    img.task_drag
+      display: none
+      margin-left: -18px
+    .inner
+      :padding	
+        top: 4px
+        bottom: 4px
+    .taskStatus
+      text-align: right
+      float: left
+      width: 30px
+      :padding
+        left: 20px
       span
-        color: rgb(100, 100, 100)
+        display: block
+        width: 23px
+        padding: 0
+        text-align: center
+    .taskName
+      font-size: 12px
+      padding-left: 4px
+      span.assigned
+        color: rgb(100,100,100)
         padding: 1px 5px
         margin-right: 5px
         font-size: 11px
         -moz-border-radius: 4px
         -webkit-border-radius: 4px
-        background: rgb(245, 245, 245)
-        border: solid 1px rgb(225, 225, 225)
+        background: rgb(245,245,245)
+        border: solid 1px rgb(225,225,225)
         text-transform: uppercase
-  tbody
-    th
-      font-size: 11px
-      background: rgb(200, 200, 200)
-      color: rgb(100, 100, 100)
-      padding: 2px 5px
-      border-top: solid 1px rgb(100, 100, 100)
-    td.name
-      span
-        color: rgb(100, 100, 100)
-        padding: 1px 5px
-        margin-right: 5px
-        font-size: 11px
-        -moz-border-radius: 4px
-        -webkit-border-radius: 4px
-        background: rgb(245, 245, 245)
-        border: solid 1px rgb(225, 225, 225)
-        text-transform: uppercase
+        display: inline-block
         a
-          color: rgb(100, 100, 100)
+          color: rgb(100,100,100)
         a:hover
           text-decoration: none
-          color: rgb(0, 0, 0)
-      span.status
+          color: rgb(0,0,0)
+      span.status, span.project, span.task_list
         display: none
-    tr.mine
-      td
-        background: rgb(255, 255, 210)
-      td.name
-        a
-          font-weight: bold
-        span
-          background: rgb(255, 255, 255)
-          border: solid 1px rgb(200, 200, 240)
-          color: rgb(0, 0, 200)
-          font-weight: bold
-          a
-            color: #555555
-            font-weight: normal
-    tr.overdue
-      td
-        background: rgb(255, 240, 240)
-      td.name
-        a
-          color: rgb(200, 0, 0)
-          font-weight: bold
-        span
-          background: rgb(255, 255, 255)
-          border: solid 1px rgb(240, 200, 200)
-          color: rgb(200, 0, 0)
-          font-weight: bold
-          a
-            color: rgb(200, 0, 0)
-            font-weight: normal
-
-div.task_list_wrap
-  -webkit-box-shadow: #eeeeee 2px 2px 2px
-  -moz-box-shadow: #eeeeee 2px 2px 2px
-  box-shadow: #eeeeee 2px 2px 2px
-  margin-bottom: 20px
-  .tasks_wrap
-    .tasks
-      border: solid 1px rgb(210, 210, 210)
-        bottom: 0px
-      background: rgb(240, 240, 240)
-      padding: 0px 3px
-        bottom: 2px
-    .read_only
-      -moz-border-radius: 5px
-      -webkit-border-radius: 5px
-      border: solid 1px rgb(210, 210, 210)
-  .task_form
-    -moz-border-radius:
-      topleft: 0px
-      topright: 0px
-    -webkit-border-top-left-radius: 0px
-    -webkit-border-top-right-radius: 0px
-  div.task_list, div.task
-    font-size: 12px
-  div.task_list
-    padding: 3px 0 3px 6px
-    background: rgb(240, 240, 240)
-    border: solid 1px rgb(210, 210, 210)
-      bottom: 0px
-    -moz-border-radius: 0
-      topleft: 5px
-      topright: 5px
-    -webkit-border: 0
-      top-left-radius: 5px
-      top-right-radius: 5px
-    a
-      color: #222222
-    .comments_count
-      float: right
-      color: rgb(180, 180, 180)
-      background: none
-    &.active_list
-      background: #259bad
-      border: 0
+  .task.overdue
+    background: rgb(255,240,240)
+    .taskName
       a
-        color: white
-        text-shadow: none
-  span.task_status, span.current_task_status
-    padding: 0
-    display: inline-block
-    width: 20px
-    text-align: center
-  div.task
-    margin: 4px 0px
-    a
-      color: #222222
-    img.drag
-      padding: 0 4px
-    a.late
-      font-weight: bold
-      color: red
-    &.task_item_open
-      a.mine
-        background-color: rgb(255, 255, 150)
-    &.active_new,&.active_open,&.active_hold,&.active_resolved,&.active_rejected
-      a.mine
-        background: transparent
-    span.due_on
-      color: rgb(150, 150, 150)
-    span.due_on.overdue
-      color: red
-      font-weight: bold
-    span.due_on.today
-      background-color: rgb(255, 255, 150)
-      padding: 0 2px
-      margin-right: 5px
-      color: black
-      font-weight: bold
+        color: rgb(200,0,0)
+        font-weight: bold
+      span
+        background: rgb(255,255,255)
+        border: solid 1px rgb(240,200,200)
+        color: rgb(200,0,0)
+        font-weight: bold
+        a
+          color: rgb(200,0,0)
+          font-weight: normal
+  .task.mine
+    background: rgb(255,255,210)
+    .taskName
+      a
+        font-weight: bold
+      span
+        background: rgb(255,255,255)
+        border: solid 1px rgb(200,200,240)
+        color: rgb(0,0,200)
+        font-weight: bold
+        a
+          color: #555
+          font-weight: normal
+  .task.overdue.mine
+    .taskName
+      span
+        color: rgb(200,0,0)
+
+.task_list_container.archived
+  .new_task
+    display: none
+  .archive
+    display: block
+
+#task_lists
+  .task_list.archived, .task_list_container.archived
+    .head
+      a
+        color: #ccc
+    .tasks
+      display: none
+
+#tasks_for_all_projects
+  .task_list
+    .task
+      span.project, span.task_list
+        border: none
+        background: none
+        display: inline
+
+table.task_list_closed
+  margin-top: 10px
+  .tasks
+    .taskStatus
+      padding-left: 50px
+      span
+        width: 18px
+        font-size: 10px
+    .taskName
+      font-size: 10px
+
 
 .active_new,.active_open,.active_hold,.active_resolved,.active_rejected
   -moz-border-radius: 5px
   -webkit-border-radius: 5px
   padding: 3px
   a
-    color: rgb(255, 255, 255)
+    color: rgb(255,255,255)
   span
-    padding:
+    :padding
       left: 2px
       right: 0px
-
 .active_new
   background: #9da3a7
-
 .active_open
   background: #ffc947
-
 .active_hold
   background: #be3cff
-
 .active_resolved
   background: #afd142
-
 .active_rejected
   background: #e97063
 
 .task_item_resolved,.task_item_rejected
   a.name
     text-decoration: line-through
-    font-style: italic
-    color: #999999
+    color: #999
 
-.index_projects
-  div.task_list_wrap
-    -webkit-box-shadow: none
-    -moz-box-shadow: none
-    box-shadow: none
-  span.due_on.overdue
-    color: red
-    font-weight: bold
+span.task_status, span.current_task_status
+  padding: 0 3px
+  text-transform: uppercase
+  font-size: 11px
+  -moz-border-radius: 4px
+  -webkit-border-radius: 4px
+  display: inline-block
+.task_status_new
+  background: #9da3a7
+  color: white
+.task_status_open
+  background: #ffc947
+  color: #333
+.task_status_hold
+  background: #be3cff
+  color: white
+.task_status_resolved
+  background: #afd142
+  color: white
+.task_status_rejected
+  background: #e97063
+  color: white
