--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -3,9 +3,18 @@
     .info
       = thumb_avatar(comment.user)
     .block
-      .date
-        = posted_date comment.created_at
-      = comment_actions_link(comment)
+      .actions_menu
+        %span.actiondate= posted_date comment.created_at
+        %span.loading{:style => 'display:none'}= "Loading..."
+        - if comment.can_edit?(current_user)
+          = image_tag('triangle.png', :class => 'triangle')
+          .extra
+            - if comment.target.class == Project
+              = convert_comment_link(comment)
+            - if comment.can_edit?(current_user)
+              = edit_comment_link(comment)
+            - if comment.can_destroy?(current_user)
+              = delete_comment_link(comment)
       .name
         = conversation_last_comment_text(comment)
         = activity_comment_user_link(comment)
