--- a/app/views/task_lists/_primer.haml
+++ b/app/views/task_lists/_primer.haml
@@ -1,8 +1,8 @@
-#primer
+#primer{:style => (primer_hidden ? 'display:none' : nil)}
   %p= t('.empty')
   .box
     - if project.editable?(current_user)
-      %h2= link_to_function t('.create_first'), show_task_list(project,TaskList.new)
+      %h2= link_to t('.create_first'), new_project_task_list_path(project), {:class => 'create_first_task_list_link'}.merge(show_new_task_list(project))
     %p= t '.define'
     %ul
       %li= t '.item1'
