--- a/app/views/task_lists/show.html.haml
+++ b/app/views/task_lists/show.html.haml
@@ -1,8 +1,8 @@
 - if @current_project.editable?(current_user)
   = task_list_form(@current_project,TaskList.new)
 
-#show_task_list
-  = task_list_header(@current_project,@task_list)
+#show_task_list{}
+  = #task_list_header(@current_project,@task_list)
   = task_list_form(@current_project,@task_list)
   = render_task_list(@current_project,@task_list,'all')
   = #people_watching(@current_project,current_user,@task_list)
