--- a/app/views/tasks/_show.haml
+++ b/app/views/tasks/_show.haml
@@ -1,7 +1,7 @@
 - if @current_project.editable?(current_user)
   = task_list_form(@current_project,TaskList.new)
 
-#show_task
+#show_task{}
   = task_header(project,task_list,task)
   = task_form(project,task_list,task) unless task.closed?
   = people_watching(project,current_user,task)
