Some extra styling for new tasks

--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -51,6 +51,10 @@ form
 
   .date_fields
     margin-bottom: 10px
+    .pick_date
+      margin-right: 20px
+      .calendar_date_select, .cds_header
+        background: transparent
 
   .submit
     width: 590px
