--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -17,6 +17,7 @@ div.content_wrap
 div.column_wrap
   float: right
   width: 300px
+  font-size: 12px
   div.column
     background: rgb(255, 255, 255)
     padding: 10px
