--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -101,6 +101,7 @@ div.column
     font-size: 16px
     padding-bottom: 5px
   img.drag
+    cursor: move
     display: inline-block
     margin-right: 20px
   div.tasks, .new_task
@@ -111,6 +112,7 @@ div.column
   a
     color: rgb(50,50,50)
   img.drag
+    cursor: move
     display: none
   .head
     font-size: 14px
@@ -132,6 +134,7 @@ div.column
     img.task_drag
       display: none
       margin-left: -18px
+      cursor: move
     .inner
       :padding	
         top: 4px
@@ -211,6 +214,7 @@ div.column
     .head
       a
         color: #ccc
+      border: none
     .tasks
       display: none
 
