Disable dropdowns while reordering task lists

--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -8,6 +8,9 @@ form
   p
     margin: 10px 0
     font-size: 12px
+  h3
+    margin-top: 5px
+    font-size: 16px
 
   .text_field, .text_area
     margin-bottom: 10px
