--- a/app/views/task_lists/index.print.haml
+++ b/app/views/task_lists/index.print.haml
@@ -2,7 +2,8 @@
   = banner(@events,@chart)
 
   - if @task_lists.any?
-    = tabular_task_lists(@current_project,@task_lists,@sub_action)
+    #task_lists
+      = render_task_lists(@current_project,@task_lists,@sub_action)
   
 - else
   %h2= t('.tasks_for_all_projects')
